# Open-dLLM

./: .env.local  .gitignore  CONTRIBUTING.md  README.md  README_cn.md  generated_text.txt  generation_output.txt  pip_.sh  pyproject.toml  sample.py  setup.py  train.sh  visual.html
configs/pretrain/: qwen2_5_coder_500M.yaml
eval/analysis/: csv_to_markdown.py  plot_passatk_curve.py
eval/eval_completion/: eval.py  run_eval.sh
eval/eval_infill/: README.md  compute_em_santa.py  eval_infill.py  grid_search_eval_infill.py  run_eval.sh  utils.py
eval/lm_eval_harness/: README.md  eval.sh  eval_sweep_humaneval.sh  eval_utils.py  grid_search_eval.py
human-eval-infilling/human_eval_infilling/: execution.py
lm-evaluation-harness/lm_eval/tasks/humaneval/: humaneval.yaml  utils.py
lm-evaluation-harness/lm_eval/tasks/mbpp/: mbpp.yaml  mbpp_plus.yaml  utils.py
scripts/: download_hf_data.py  mereg_dcp_to_hf.py
scripts/upload/: README.md  upload_model.py
tasks/: train_torch.py
veomni/data/: data_collator.py  data_loader.py  dynamic_batching.py
veomni/models/: module_utils.py
veomni/models/seed_omni/: processing_seed_omni.py
veomni/models/transformers/deepseek_v3/: __init__.py
veomni/models/transformers/qwen2/: generation_utils.py  modeling_qwen2.py
veomni/utils/: arguments.py
